--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,23 @@
+//{
+//    "go.toolsEnvVars": {
+//        "GOARCH":"wasm",
+//        "GOOS":"js",
+//    },
+//    "go.testEnvVars": {
+//        "GOARCH":"wasm",
+//        "GOOS":"js",
+//    },
+//    "go.installDependenciesWhenBuilding": false,
+//}
+
 {
     "go.toolsEnvVars": {
-        "GOARCH":"wasm",
-        "GOOS":"js",
+        "GOARCH":"amd64",
+        "GOOS":"linux",
     },
     "go.testEnvVars": {
-        "GOARCH":"wasm",
-        "GOOS":"js",
+        "GOARCH":"amd64",
+        "GOOS":"linux",
     },
     "go.installDependenciesWhenBuilding": false,
 }
