--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,23 +1,23 @@
-{
-    "go.toolsEnvVars": {
-        "GOARCH":"wasm",
-        "GOOS":"js",
-    },
-    "go.testEnvVars": {
-        "GOARCH":"wasm",
-        "GOOS":"js",
-    },
-    "go.installDependenciesWhenBuilding": false,
-}
-
 //{
 //    "go.toolsEnvVars": {
-//        "GOARCH":"amd64",
-//        "GOOS":"linux",
+//        "GOARCH":"wasm",
+//        "GOOS":"js",
 //    },
 //    "go.testEnvVars": {
-//        "GOARCH":"amd64",
-//        "GOOS":"linux",
+//        "GOARCH":"wasm",
+//        "GOOS":"js",
 //    },
 //    "go.installDependenciesWhenBuilding": false,
 //}
+
+{
+    "go.toolsEnvVars": {
+        "GOARCH":"amd64",
+        "GOOS":"linux",
+    },
+    "go.testEnvVars": {
+        "GOARCH":"amd64",
+        "GOOS":"linux",
+    },
+    "go.installDependenciesWhenBuilding": false,
+}
